REFACTOR : 주문 생성 로직 간소화